Hide horizontal overflow on hiding articles; fixes #130

--- a/ui/static/css/common.css
+++ b/ui/static/css/common.css
@@ -528,6 +528,10 @@ a.button {
     content: "";
 }
 
+.hide-read-items {
+    overflow-x: hidden;
+}
+
 .hide-read-items .item-status-read {
     display: none;
 }
